# neural-free-energy-1d

./: .gitattributes  .gitignore  README  README.md  pyproject.toml
cdft_1d_package/data_split/: f1_val_files.txt
cdft_1d_package/datasets/: c2_dataset.py  rho_dataset.py
cdft_1d_package/models/: cnn.py
cdft_1d_package/utils/: base_module.py  config.py  data_split.py  plotting_utils.py  setup.py
data_split/: f1_train_files.txt
experiments/f1_experiments/f1_cnn/: train_f1_cnn.py
experiments/f2_experiments/f2_cnn/: train_f2_cnn.py
